--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ url: "https://dtourolle.github.io" # the base hostname & protocol for your site,
 
 permalink: /:slug.html
 
-favicon: "logo.png" # name+extension of favicon (which must be put on the root folder)
+favicon: "logo.jfif" # name+extension of favicon (which must be put on the root folder)
 # goat_counter: "yoursitename" # put your GoatCounter name if you want to use GoatCounter analytics
 
 remote_theme: riggraz/no-style-please # if you are using GitHub Pages, change it to remote_theme: riggraz/no-style-please
