--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -2,16 +2,12 @@
 # https://github.com/riggraz/no-style-please#customize-the-menu
 
 entries:
-  - title: info
     entries:
-      - title: a (nearly) no-CSS, fast, minimalist Jekyll theme.
-      - title: github repo
-        url: https://github.com/riggraz/no-style-please
-      - title: "used by <a href='https://riggraz.dev'>riggraz.dev</a> and <a href='https://github.com/riggraz/no-style-please/network/dependents'>many others</a>"
+      - title: This is a portfolio of private projects I have started and maybe even completed. I am an engineer and researcher who enjoys projects which combine mechanical design with automation.
 
   - title: all posts
     post_list:
-      limit: 5
+      limit: 10
       show_more: true
       show_more_text: See archive...
       show_more_url: archive.html
@@ -36,3 +32,6 @@ entries:
   - title: PRO TIP
     entries:
       - title: to edit this menu, edit _data/menu.yml file
+
+  - title: Using style from here
+    url: https://github.com/riggraz/no-style-please
