--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -2,6 +2,7 @@
 # https://github.com/riggraz/no-style-please#customize-the-menu
 
 entries:
+  - title: about
     entries:
       - title: This is a portfolio of private projects I have started and maybe even completed. I am an engineer and researcher who enjoys projects which combine mechanical design with automation.
 
