--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -13,26 +13,17 @@ entries:
       show_more_text: See archive...
       show_more_url: archive.html
 
-  - title: posts by category
+  - title: posts by project
     post_list:
-      category: example2
+      category: e-reader
       show_more: true
       show_more_text: See more posts...
-      show_more_url: example2-archive.html
+      show_more_url: e-reader-archive.html
 
   - title: rss
     url: feed.xml
   
-  - title: another list
-    entries:
-      - title: with subitems
-        entries:
-          - title: with subsubitems
-          - title: example page
-            url: about
-  - title: PRO TIP
-    entries:
-      - title: to edit this menu, edit _data/menu.yml file
+
 
   - title: Using style from here
     url: https://github.com/riggraz/no-style-please
