--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ url: "https://dtourolle.github.io" # the base hostname & protocol for your site,
 
 permalink: /:slug.html
 
+  
 favicon: "logo.jfif" # name+extension of favicon (which must be put on the root folder)
 # goat_counter: "yoursitename" # put your GoatCounter name if you want to use GoatCounter analytics
 
@@ -24,3 +25,4 @@ sass:
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
+  - jekyll-relative-links
