--- a/_config.yml
+++ b/_config.yml
@@ -26,3 +26,7 @@ plugins:
   - jekyll-feed
   - jekyll-seo-tag
   - jekyll-relative-links
+
+relative_links:
+  enabled:     true
+  collections: false
