--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ permalink: /:slug.html
 favicon: "logo.jfif" # name+extension of favicon (which must be put on the root folder)
 # goat_counter: "yoursitename" # put your GoatCounter name if you want to use GoatCounter analytics
 
-remote_theme: the-development/flex # if you are using GitHub Pages, change it to remote_theme: riggraz/no-style-please
+theme: flex # if you are using GitHub Pages, change it to remote_theme: riggraz/no-style-please
 
 markdown: redcarpet
 pygments: true
