--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ favicon: "logo.jfif" # name+extension of favicon (which must be put on the root 
 # goat_counter: "yoursitename" # put your GoatCounter name if you want to use GoatCounter analytics
 
 remote_theme: broccolini/swiss
-theme_color: grey
+theme_color: gray
 markdown: kramdown
 pygments: true
 
