--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,8 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://dtourolle.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
+github_username: dtourolle
+
 permalink: /:slug.html
 
   
@@ -21,6 +23,9 @@ theme_config:
   back_home_text: ".." # customize text for homepage link in post layout
   date_format: "%Y-%m-%d" # customize how date is formatted
   show_description: false # show blog description in home page
+
+social_link: linkedin
+social_username: dtourolle
 
 
 plugins:
