--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ theme_config:
   date_format: "%Y-%m-%d" # customize how date is formatted
   show_description: false # show blog description in home page
 
-social_link: linkedin
+social_link: "https://www.linkedin.com/in/dtourolle/"
 social_username: dtourolle
 
 
