--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,8 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://dtourolle.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
+github_repo: "" # the GitHub repo name for your project
+github_username: dtourolle
 
 
 permalink: /:slug.html
