--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ github_username: dtourolle
 permalink: /:slug.html
 
   
-favicon: "logo.jfif" # name+extension of favicon (which must be put on the root folder)
+favicon: "favicon.ico" # name+extension of favicon (which must be put on the root folder)
 # goat_counter: "yoursitename" # put your GoatCounter name if you want to use GoatCounter analytics
 
 remote_theme: broccolini/swiss
